# Legalassist-AI

./: .gitignore  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  analytics_engine.py  app.py  auth.py  case_manager.py  celery_app.py  cli.py  config.py  core.py  database.py  db_shim_clean.py  notification_service.py  notifications_ui.py  pdf_exporter.py  pyproject.toml  report_service.py  scheduler.py
.github/workflows/: tests.yml
api/: auth.py  config.py  csrf.py  dependencies.py  idempotency.py  jwt_auth.py  limiter.py  main.py  middleware.py  models.py  validation.py
api/routes/: analytics.py  audit.py  auth.py  case_search.py  cases.py  deadlines.py  documents.py  efiling.py  health.py  notifications.py  reports.py  speech.py
core/: __init__.py  app_utils.py  argument_strength.py  blockchain_sim.py  citation_engine.py  deadline_engine.py  e2ee.py  image_processor.py  log_redaction.py  rag_engine.py  speech_transcription.py  storage.py  timezone_utils.py
db/: __init__.py  case_service.py  immutable_audit_log.py  retention_service.py  session.py
db/crud/: notifications.py
pages/: 0_Home.py  1_Analytics_Dashboard.py  1_My_Cases.py  2_Case_Details.py  3_Deadline_Tracker.py  4_Team_Management.py
services/: deadlines_auto_creator.py  gdpr_deletion.py  job_realtime.py  timeline_realtime.py
tests/: test_audio_transcription.py  test_case_timeline_api.py  test_case_timeline_websocket.py  test_citation_regex.py  test_deadlines_auto_creator.py  test_e2ee.py  test_gdpr_deletion.py  test_scheduler_comprehensive.py  test_timeline_realtime.py  test_timezone_parsing.py
(+7 files in other folders)
