[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LegalAssist-AI"
version = "0.1.0"
description = "AI-powered legal document analysis and management system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "openai>=1.0.0",
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
    "fpdf2>=2.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "twilio>=8.10.0",
    "sendgrid>=6.10.0",
    "apscheduler>=3.10.4",
    "pytz>=2024.1",
    "structlog>=24.1.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "sentence-transformers>=2.2.2",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pre-commit]
# hooks will be defined in .pre-commit-config.yaml
